# Logo-Maker

./: Box.h  ColorList.cpp  ColorList.h  ColorPicker.cpp  ColorPicker.h  FileItem.h  FileNode.cpp  FileTree.cpp  FileTree.h  Font.cpp  Font.h  History.cpp  Image.cpp  Image.h  InputBox.h  Item.h  ItemList.cpp  ItemList.h  KeyShortcuts.cpp  Letter.h  Menu.h  MenuBar.cpp  Node_iterator.cpp  ObjectStates.h  Panel.cpp  Panel.h  README.md  Slider.cpp  SliderList.cpp  SliderList.h  Snapshot.cpp  SnapshotInterface.h  States.cpp  Text.cpp  Text.h  TextInputInfo.h  Texture.cpp  main.cpp  node.h
Logo Maker/: Box.cpp  CMakeLists.txt  ColorGradient.cpp  ColorGradient.h  ColorSquare.cpp  ColorSquare.h  EventHandler.h  FileItem.cpp  FileNode.h  FontList.cpp  FontList.h  GUIComponents.h  History.h  HistoryNode.h  Icon.cpp  Icon.h  InputBox.cpp  Item.cpp  KeyShortcuts.h  Letter.cpp  LinkedList.cpp  LinkedList.h  LogoMaker.cpp  LogoMaker.h  Menu.cpp  MenuBar.h  MouseEvents.cpp  MouseEvents.h  MultiText.cpp  MultiText.h  Node_iterator.h  Slider.h  Snapshot.h  States.h  TextInput.cpp  TextInput.h  Texture.h  Window.cpp  Window.h
Logo Maker/files/: Logo1.txt  Logo2.txt  output.txt
